<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_pet"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/edtPetName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/pet_name"/>

    <EditText
        android:id="@+id/edtPetAge"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/pet_age"/>

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_male"/>
        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_female"/>
    </RadioGroup>

    <EditText
        android:id="@+id/edtPetAvatar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/avatar_link_optional"/>

    <EditText
        android:id="@+id/edtPetBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Ngày sinh (yyyy-MM-dd)" />

    <EditText
        android:id="@+id/edtPetHealthStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Tình trạng sức khỏe" />

    <EditText
        android:id="@+id/edtPetVaccination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Lịch tiêm phòng, tẩy giun" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="16dp">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel"/>
        <Button
            android:id="@+id/btnAddPet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_add"/>
    </LinearLayout>
</LinearLayout> 