<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:id="@+id/splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/splashImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="192dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_logo_petshop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="376dp"
        android:fontFamily="@font/poetsenone_regular"
        android:text="@string/app_description"
        android:textColor="#804315"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLinkLogin"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginTop="44dp"
        android:text="@string/login"
        android:fontFamily="@font/pacifico_regular"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleApp" />

    <Button
        android:id="@+id/btnLinkRegister"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/create_account"
        android:fontFamily="@font/pacifico_regular"
        android:textColor="@color/black"
        android:backgroundTint="@color/b_dam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLinkLogin" />

    <TextView
        android:id="@+id/socialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_info"
        android:textColor="#888"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>