<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="24dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/petImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar_pet"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp">

            <!-- Nút xóa pet ở góc trên bên phải -->
            <ImageButton
                android:id="@+id/btnDeletePet"
                android:layout_width="48dp"
                android:layout_height="49dp"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_remove"
                android:contentDescription="Xóa thú cưng"
                android:padding="4dp"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/petName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/edusahand_bold"
                android:layout_gravity="start"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/petAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_age"
                android:textSize="14sp"
                android:textStyle="bold"
                android:fontFamily="@font/edusahand_bold"
                android:layout_gravity="start"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/petGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_gender"
                android:fontFamily="@font/edusahand_bold"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_gravity="start"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/petHealthStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tình trạng: Dị ứng"
                android:textSize="14sp"
                android:fontFamily="@font/edusahand_bold"
                android:textStyle="italic"
                android:layout_gravity="start"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>